# monoid-statistics

./: monoid-statistics.cabal
src/Math/Statistics/: Monoid.hs
