name:                   monoid-statistics
version:                0.0.0.2
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Monoids for computing statistics
description:            Monoids for computing statistics in constant space,
                        supporting arbitrary concatenation of (the statistical
                        summaries of) datasets without requiring those
                        original data sets.

source-repository head
  type: git
  location: git://github.com/mokus0/monoid-statistics.git

Library
  hs-source-dirs:       src
  exposed-modules:      Math.Statistics.Monoid
  build-depends:        base >= 3 && < 5
